--- a/teste.html
+++ b/teste.html
@@ -14,7 +14,7 @@
   <nav id="area">
     <div class="container">
     <div class="col-md-7">
-      <h1>𝐓𝐄𝐋𝐀 𝐃𝐄 𝐈𝐍Í𝐂𝐈𝐎</h1>
+      <h1>𝐓𝐄𝐋𝐀 𝐃𝐄 𝐈𝐍𝐈𝐂𝐈𝐎 </h1>
         <label for="inputEmail4" class="form-label"><b>𝐄-𝐌𝐀𝐈𝐋</b></label>
         <input type="email" class="form-control" id="inputEmail4">
       </div>
@@ -25,11 +25,8 @@
     </div>
     <p></p>
     <div class="col-15">
-      <button type="submit" class="btn btn-primary">𝘼𝘾𝙀𝙎𝙎𝘼𝙍</button>
-      
+      <button type="button" class="btn btn-outline-dark"><b>ACESSAR</b></button>
     </div>
     
-  
 </body>
-
 </html>
